--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html
 <!doctype html>
 <html lang="en-US">
   <head>
@@ -7,6 +6,6 @@ index.html
     <title>My test page</title>
   </head>
   <body>
-    <img src="" alt="Hello World" />
+    Hello World
   </body>
 </html>
