--- a/course 1/exercise2/index.html
+++ b/course 1/exercise2/index.html
@@ -9,9 +9,9 @@
     </head>
     <body><!--all the contents of an HTML document goes here-->
         <h1>A Handmade Web</h1>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC.html">chapter1</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter2</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter3</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter4</a>
+        <a href="https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course1/html1.html">chapter1</a>
+        <a href="https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course1/html2.html">chapter2</a>
+        <a href="https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course1/html3.html">chapter3</a>
+        <a href="https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course1/html4.html">chapter4</a>
     </body>
 </html>
