--- a/course1/exercise2/index.html
+++ b/course1/exercise2/index.html
@@ -9,10 +9,10 @@
     </head>
     <body><!--all the contents of an HTML document goes here-->
         <h1>Title:A Handmade Web</h1>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/exercise2/html1.html">chapter1</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/exercise2/html2.html">chapter2</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/exercise2/html3.html">chapter3</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/exercise2/html4.html">chapter4</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html1.html">chapter1</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html2.html">chapter2</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html3.html">chapter3</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html4.html">chapter4</a>
         <i>made by Bonnie Chen</i>
     </body>
 </html>
