--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <h1>A Handmade Web</h1>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC.html">chapter1</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter2</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter3</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course%201/html%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC%20-%20%E5%89%AF%E6%9C%AC.html">chapter4</a>
+        <h1>Title:A Handmade Web</h1>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html1.html">chapter1</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html2.html">chapter2</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html3.html">chapter3</a>
+        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html4.html">chapter4</a>
+        <i>made by Bonnie Chen</i>
     </body>
 </html>
