--- a/course1/exercise2/index.html
+++ b/course1/exercise2/index.html
@@ -3,16 +3,33 @@
     <head><!-- a container for metadata -->
         <meta charset="utf-8"><!--charset: character encoding capable of encoding all characters on the web  -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><!--for browser compatibility: choose rendering engine to view the page in an correct view (for old ver. IE)  -->
-        <title></title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
+        <title>A Handmade Web</title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
         <meta name="description" content=""><!--keywords/snippet for search engines-->
         <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
+   
+        <head>
+    <style type="text/css">
+        p {
+            color:green;
+        }
+    </style>
+</head>
+<body>
+    <p>…</p>
+    <p>…</p>
+</body>
+
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <h1>Title:A Handmade Web</h1>
+        <h1></h1>
+
+
+
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html1.html">chapter1</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html2.html">chapter2</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html3.html">chapter3</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html4.html">chapter4</a>
-        <i>made by Bonnie Chen</i>
+        <i>
+        made by Bonnie Chen</i>
     </body>
 </html>
