--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body><!--all the contents of an HTML document goes here-->
         <h1>Title:A Handmade Web</h1>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html1.html">chapter1</a>
+        <a href="https://htmlpreview.github.io/?https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course2/html1.html">chapter1</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html2.html">chapter2</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html3.html">chapter3</a>
         <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html4.html">chapter4</a>
