--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><!--document type declaration-->
+<!DOCTYPE html>
 <html>
-    <head><!-- a container for metadata -->
+    <head>
         <meta charset="utf-8"><!--charset: character encoding capable of encoding all characters on the web  -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><!--for browser compatibility: choose rendering engine to view the page in an correct view (for old ver. IE)  -->
         <title></title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
@@ -10,9 +10,9 @@
     <body><!--all the contents of an HTML document goes here-->
         <h1>Title:A Handmade Web</h1>
         <a href="https://htmlpreview.github.io/?https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course2/html1.html">chapter1</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html2.html">chapter2</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html3.html">chapter3</a>
-        <a href="file:///D:/Documents/GitHub/bonnie-piggy.github.io/course1/exercise2/html4.html">chapter4</a>
+        <a href="https://htmlpreview.github.io/?https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course2/html2.html">chapter2</a>
+        <a href="https://htmlpreview.github.io/?https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course2/html3.html">chapter3</a>
+        <a href="https://htmlpreview.github.io/?https://github.com/bonnie-piggy/bonnie-piggy.github.io/blob/course2/html4.html">chapter4</a>
         <i>made by Bonnie Chen</i>
     </body>
 </html>
