--- a/course1/exercise2/html1.html
+++ b/course1/exercise2/html1.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html><!--document type declaration-->
 <html>
-    <head><!-- a container for metadata -->
-        <meta charset="utf-8"><!--charset: character encoding capable of encoding all characters on the web  -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><!--for browser compatibility: choose rendering engine to view the page in an correct view (for old ver. IE)  -->
-        <title>Chapter1</title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
-        <meta name="description" content=""><!--keywords/snippet for search engines-->
-        <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
-        <link rel="stylesheet" href="style.css"><!--linking an external CSS file to the HTML document-->
-    </head>
+<head>
+    <meta charset="utf-8"><!--charset: character encoding capable of encoding all characters on the web  -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><!--for browser compatibility: choose rendering engine to view the page in an correct view (for old ver. IE)  -->
+    <title>Chapter1</title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
+     <meta name="description" content=""><!--keywords/snippet for search engines-->
+    <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
+    <link rel="stylesheet" href="style.css">
+</head>
     <body><!--all the contents of an HTML document goes here-->
-        <h>The term 'handmade' usually refers to objects made by hand or by using simple tools rather
+        <p><i>Part 1</i></p>
+    
+    <p>The term 'handmade' usually refers to objects made by hand or by using simple tools rather
 than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
-a pair of bespoke brogues.
+a pair of bespoke brogues.</p>
+    <p><strong>
 I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
 software; web pages made and maintained by individuals rather than by businesses or
 corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
@@ -19,7 +22,7 @@ which challenge conventions of reading, writing, design, ownership, privacy, sec
 identity.
 Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
 web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
-the web of this period.</h>
+the web of this period.</strong></p>
         <div style="position: fixed; left: 8%; bottom: 35%; background: #f9f9f9;
         padding: 10px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); font-size: 14px; line-height: 1.5;">
             handmade<br>
@@ -33,6 +36,7 @@ the web of this period.</h>
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-         <p2><strong><a href="index.html"> ◄</a>      <a href="html2.html"> ► </a></strong> </p2>
-    </body>
+         <p><a href="index.html"> ◄</a>      <a href="html2.html"> ► </a></p>
+     <link rel="stylesheet" href="style.css">
+        </body>
 </html>
