--- a/html1.html
+++ b/html1.html
@@ -9,20 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body><!--all the contents of an HTML document goes here-->
-        <p><i>Part 1</i></p>
-    
-    <p>The term 'handmade' usually refers to objects made by hand or by using simple tools rather
-than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
-a pair of bespoke brogues.</p>
-    <p><strong>
-I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
-software; web pages made and maintained by individuals rather than by businesses or
-corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
-which challenge conventions of reading, writing, design, ownership, privacy, security, or
-identity.
-Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
-web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
-the web of this period.</strong></p>
+        <h1><i>Part 1</i></h1>
+        <p style="background-color: #467095;">The term 'handmade' usually refers to objects made by hand or by using simple tools rather
+        than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
+        a pair of bespoke brogues.<br>
+        I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
+        software; web pages made and maintained by individuals rather than by businesses or
+        corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
+        which challenge conventions of reading, writing, design, ownership, privacy, security, or
+        identity.<br>
+        Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
+        web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
+        the web of this period.</p>
         <div style="position: fixed; left: 8%; bottom: 35%; background: #f9f9f9;
         padding: 10px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); font-size: 14px; line-height: 1.5;">
             handmade<br>
@@ -30,12 +28,15 @@ the web of this period.</strong></p>
             bonnie<br>
             <span style="font-size: 10px;">from <a href="http://handmadeweb.org/" target="_blank">http://handmadeweb.org/</a></span>
         </div>
-        <div style="position: absolute; top: 20px; right: 20px; background: #f9f9f9; padding: 12px 18px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
+        <div class="navigation">
             <a href="index.html">home</a><br>
             <a href="html2.html" style="margin-top:10px;">chapter2</a><br>
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-         <p><a href="index.html"> ◄</a>      <a href="html2.html"> ► </a></p>
+        <div style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; padding: 10px 0; background: none;">
+            <a href="index.html">◄</a>
+            <a href="html2.html" style="margin-left: 20px;">►</a>
+        </div>
     </body>
 </html>
