--- a/html1.html
+++ b/html1.html
@@ -10,19 +10,20 @@
 </head>
     <body><!--all the contents of an HTML document goes here-->
         <h1><i>Part 1</i></h1>
-        <p style="background-color: #467095;">The term 'handmade' usually refers to objects made by hand or by using simple tools rather
-        than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
-        a pair of bespoke brogues.<br>
-        I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
-        software; web pages made and maintained by individuals rather than by businesses or
-        corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
-        which challenge conventions of reading, writing, design, ownership, privacy, security, or
-        identity.<br>
-        Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
-        web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
-        the web of this period.</p>
-        <div style="position: fixed; left: 8%; bottom: 35%; background: #f9f9f9;
-        padding: 10px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); font-size: 14px; line-height: 1.5;">
+        <div class="content">
+            <p style="background-color: #467095;">The term 'handmade' usually refers to objects made by hand or by using simple tools rather
+            than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
+            a pair of bespoke brogues.<br>
+            I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
+            software; web pages made and maintained by individuals rather than by businesses or
+            corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
+            which challenge conventions of reading, writing, design, ownership, privacy, security, or
+            identity.<br>
+            Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
+            web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
+            the web of this period.</p>
+        </div>
+        <div style="position: fixed; left: 8%; bottom: 35%; background: #f9f9f9; padding: 10px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); font-size: 14px; line-height: 1.5;">
             handmade<br>
             by<br>
             bonnie<br>
@@ -34,7 +35,7 @@
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-        <div style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; padding: 10px 0; background: none;">
+        <div class="footer">
             <a href="index.html">◄</a>
             <a href="html2.html" style="margin-left: 20px;">►</a>
         </div>
