--- a/html1.html
+++ b/html1.html
@@ -11,14 +11,18 @@
     <body><!--all the contents of an HTML document goes here-->
         <h1><i>Part 1</i></h1>
         <div class="content">
-            <p style="background-color: #467095;">The term 'handmade' usually refers to objects made by hand or by using simple tools rather
+            <p>The term 'handmade' usually refers to objects made by hand or by using simple tools rather
             than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
             a pair of bespoke brogues.<br>
+            </p>
+            <p>
             I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
             software; web pages made and maintained by individuals rather than by businesses or
             corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
             which challenge conventions of reading, writing, design, ownership, privacy, security, or
             identity.<br>
+            </p>
+            <p>
             Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
             web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
             the web of this period.</p>
