--- a/html1.html
+++ b/html1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body><!--all the contents of an HTML document goes here-->
-        <h1><i>Part 1</i></h1>
+        <h1><i>Chapter 1</i></h1>
         <div class="content">
             <p>The term 'handmade' usually refers to objects made by hand or by using simple tools rather
             than machines. The result may be homely — as in a child's clay ashtray — or exquisite — as in
@@ -27,7 +27,7 @@
             web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
             the web of this period.</p>
         </div>
-        <div style="position: fixed; left: 8%; bottom: 35%; background: #f9f9f9; padding: 10px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); font-size: 14px; line-height: 1.5;">
+        <div class="handmade">
             handmade<br>
             by<br>
             bonnie<br>
@@ -39,9 +39,11 @@
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
+        <div class="navigation-mobile">↑</div>
         <div class="footer">
-            <a href="index.html">◄</a>
+            <a href="index.html">🏠</a>
             <a href="html2.html" style="margin-left: 20px;">►</a>
+            <span style="color: #e6bf16;"></span>
         </div>
     </body>
 </html>
