--- a/index.html
+++ b/index.html
@@ -16,24 +16,35 @@
             font-size: 30px;
         }
         .progress-box {
-            width: 80%;
-            margin: 20px auto;
+            height: 60vh;
+            width: 40px;
+            position: fixed;
+            top: 50%;
+            left: 30px;
+            transform: translateY(-50%);
             background: #eee;
-            border-radius: 10px;
-            padding: 10px;
+            border-radius: 20px;
+            padding: 10px 0;
+            display: flex;
+            align-items: flex-end;
+            z-index: 20;
         }
         .progress-bar {
             width: 100%;
-            height: 20px;
+            height: 100%;
             background: #ccc;
-            border-radius: 10px;
+            border-radius: 20px;
             position: relative;
+            display: flex;
+            flex-direction: column-reverse;
+            overflow: hidden;
         }
         .progress-bar-fill {
-            width: 50%;
-            height: 100%;
+            width: 100%;
+            height: 50%;
             background: #9fc824;
-            border-radius: 10px;
+            border-radius: 20px 20px 0 0;
+            transition: height 0.3s;
         }
     </style>
     <style>
@@ -56,9 +67,23 @@
             <div class="progress-bar-fill"></div>
         </div>
     </div>
-    <a href="html1.html" style="color: #f2d42c;">chapter1</a><br>
-    <a href="html2.html" style="color: #f2d42c;">chapter2</a><br>
-    <a href="html3.html" style="color: #f2d42c;">chapter3</a><br>
-    <a href="html4.html" style="color: #f2d42c;">chapter4</a>
+    <div class="side-links">
+        <a href="html1.html" style="color: #f2d42c;">chapter1</a><br>
+        <a href="html2.html" style="color: #f2d42c;">chapter2</a><br>
+        <a href="html3.html" style="color: #f2d42c;">chapter3</a><br>
+        <a href="html4.html" style="color: #f2d42c;">chapter4</a>
+    </div>
+    <style>
+        .side-links {
+            position: fixed;
+            top: 50%;
+            left: 90px;
+            transform: translateY(-50%);
+            z-index: 30;
+            text-align: left;
+            font-size: 28px;
+            line-height: 2;
+        }
+    </style>
 </body>
 </html>
