--- a/html2.html
+++ b/html2.html
@@ -31,7 +31,7 @@
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-        <div class="navigation-mobile">↑</div>
+        <div class="navigation-mobile">👆</div>
         <div class="footer">
             <a href="html1.html">◄</a>
             <a href="html3.html" style="margin-left: 20px;">►</a>
