--- a/html4.html
+++ b/html4.html
@@ -85,7 +85,7 @@
             <a href="html2.html" style="margin-top:10px;">chapter2</a><br>
             <a href="html3.html" style="margin-top:10px;">chapter3</a>
         </div>
-        <div class="navigation-mobile">↑</div>
+        <div class="navigation-mobile">👆</div>
         <div class="footer">
             <a href="html3.html">◄</a>
             <a href="index.html" style="margin-left: 20px;">🏠</a>
