--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         }
         .progress-box {
             height: 60vh;
-            width: 40px;
+            width: 24px;
             position: fixed;
             top: 50%;
             left: 30px;
             transform: translateY(-50%);
-            background: #eee;
-            border-radius: 20px;
+            background: #f2d42ca0;
+            border-radius: 12px;
             padding: 10px 0;
             display: flex;
             align-items: flex-end;
@@ -32,8 +32,8 @@
         .progress-bar {
             width: 100%;
             height: 100%;
-            background: #ccc;
-            border-radius: 20px;
+            background: #f2d42c;
+            border-radius: 12px;
             position: relative;
             display: flex;
             flex-direction: column-reverse;
@@ -43,7 +43,7 @@
             width: 100%;
             height: 50%;
             background: #9fc824;
-            border-radius: 20px 20px 0 0;
+            border-radius: 12px 12px 0 0;
             transition: height 0.3s;
         }
     </style>
@@ -68,10 +68,11 @@
         </div>
     </div>
     <div class="side-links">
-        <a href="html1.html" style="color: #f2d42c;">chapter1</a><br>
-        <a href="html2.html" style="color: #f2d42c;">chapter2</a><br>
-        <a href="html3.html" style="color: #f2d42c;">chapter3</a><br>
-        <a href="html4.html" style="color: #f2d42c;">chapter4</a>
+        <p style="color: #f2d42ce7;">START<br>👇</p>
+        <a href="html1.html" style="color: #f2d42ce7;">chapter1</a><br>
+        <a href="html2.html" style="color: #f2d42ce7;">chapter2</a><br>
+        <a href="html3.html" style="color: #f2d42ce7;">chapter3</a><br>
+        <a href="html4.html" style="color: #f2d42ce7;">chapter4</a>
     </div>
     <style>
         .side-links {
