--- a/html1.html
+++ b/html1.html
@@ -39,7 +39,7 @@
             <a href="html3.html" style="margin-top:10px;">chapter3</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-        <div class="navigation-mobile">↑</div>
+        <div class="navigation-mobile">👆</div>
         <div class="footer">
             <a href="index.html">🏠</a>
             <a href="html2.html" style="margin-left: 20px;">►</a>
