--- a/html3.html
+++ b/html3.html
@@ -62,7 +62,7 @@
             <a href="html2.html" style="margin-top:10px;">chapter2</a><br>
             <a href="html4.html" style="margin-top:10px;">chapter4</a>
         </div>
-        <div class="navigation-mobile">↑</div>
+        <div class="navigation-mobile">👆</div>
         <div class="footer">
             <a href="html2.html">◄</a>
             <a href="html4.html" style="margin-left: 20px;">►</a>
