--- a/project1/project1.html
+++ b/project1/project1.html
@@ -433,8 +433,9 @@
         </div>
 
 
+
         <!-- 主要内容区域 -->
-    <div class="dream">
+    <div class="dream"style="margin:150px">
         <div class="content">
             <div class="about-text">
                 <h2>about the page<br>-</h2>
