--- a/project1/project1.html
+++ b/project1/project1.html
@@ -18,11 +18,10 @@
     <link rel="stylesheet" href="project1.css">
     <link rel="stylesheet" href="card1.css">
     <script src="card1.js"></script>
-    <script src="toggle1.js"></script>
     <style id="ssr-media">
-      @media (max-width: 1239px), (min-width: 800px) { body:has([data-breakpoint-id="node-1_129"]) { background-color: #FFF } }
-      @media (max-width: 1279px), (min-width: 1240px) { body:has([data-breakpoint-id="node-43_72"]) { background-color: #FFF } }
-      @media (min-width: 1280px) { body:has([data-breakpoint-id="node-1_26"]) { background-color: #FFF } }
+      @media (max-width: 1239px), (min-width: 800px) { body:has([data-breakpoint-id="node-1_129"]) 
+      @media (max-width: 1279px), (min-width: 1240px) { body:has([data-breakpoint-id="node-43_72"]) 
+      @media (min-width: 1280px) { body:has([data-breakpoint-id="node-1_26"])  
     </style>
 
 </head>
@@ -484,7 +483,7 @@
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
+      from { opacity: 1; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
@@ -494,7 +493,7 @@
       display: block;
       background-color: #e0dcc9;
       color: #444;
-      text-decoration: none;
+      font-family: "Host Grotesk", sans-serif; word-break: break-word; font-size:14px; --letter-spacing: 1px;
       padding: 14px 20px;
       max-width: 85%;
       width: 100%;
@@ -519,7 +518,7 @@
     <!-- 隐藏的子按钮 -->
     <div class="sub-buttons" id="subBtns">
       <a href="https://www.artsy.net/article/artsy-editorial-what-were-1960s-happenings-and-why-do-they-matter" target="_blank">
-        What Were 1960s Happenings and Why Do They Matter⤤
+        What Were 1960s Happenings and Why Do They Matter⤤ 
       </a>
       <a href="https://www.artsy.net/article/artsy-editorial-making-salad-groundbreaking-performance-art" target="_blank">
         Making Salad as Groundbreaking Performance Art⤤
