--- a/exercises/e4-5/bletter-still.html
+++ b/exercises/e4-5/bletter-still.html
@@ -6,15 +6,14 @@
     <title>B-exercise4-5</title>
     <meta name="description" content="Letter B constructed from basic strokes">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="bletter.css">
+    <link rel="stylesheet" href="bletter-still.css">
 </head>
 <body>
     <style>
         body {
             background-color: #000000d8;
+            margin-left: 450px;
         }
-    </style>
-    <style>
         .stack {
             display: flex;
             flex-direction: column;
@@ -59,8 +58,5 @@
             <div class="circle7">
             <div class="circle8"></div>
         <div style="height:600px;"></div>
-        <div class="handmade" style="background:#666;color:#fff;padding:20px 30px;border-radius:8px;font-size:30px;display:inline-block;">
-            Bonnie
-        </div>
 </body>
 </html>
