--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>EXERCISE-3-Bonnie</title>
+    <title>navigation landing page</title>
     <meta name="description" content="handmade-website">
     <meta name="viewport" content="width=device-width">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #467095;
@@ -15,76 +18,37 @@
             color: #9fc824;
             font-size: 30px;
         }
-        .progress-box {
-            height: 60vh;
-            width: 24px;
-            position: fixed;
-            top: 50%;
-            left: 30px;
-            transform: translateY(-50%);
-            background: #f2d42ca0;
-            border-radius: 12px;
-            padding: 10px 0;
-            display: flex;
-            align-items: flex-end;
-            z-index: 20;
-        }
-        .progress-bar {
-            width: 100%;
-            height: 100%;
-            background: #f2d42c;
-            border-radius: 12px;
-            position: relative;
-            display: flex;
-            flex-direction: column-reverse;
-            overflow: hidden;
-        }
-        .progress-bar-fill {
-            width: 100%;
-            height: 50%;
-            background: #9fc824;
-            border-radius: 12px 12px 0 0;
-            transition: height 0.3s;
-        }
-    </style>
-    <style>
-        .centered-text {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            margin: 0;
-            font-size: 50px;
-            color: #9fc824;
-            background: transparent;
-            z-index: 10;
-            text-shadow: #151d25 1px 1px 2px;
-        }
-    </style>
-    <p class="centered-text">A Handmade Web</p>
+        p {
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+    margin-left: 3rem;
+    background: linear-gradient(135deg, #c3d3ee, #9ab9ee);
+    font-family: "Comfortaa", sans-serif;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+        </style>
+</head>
+
+<body>
+    <p class="centered-text">Bonnie Chen's website</p>
     <div class="progress-box">
         <div class="progress-bar">
             <div class="progress-bar-fill"></div>
         </div>
     </div>
-    <div class="side-links">
-        <p style="color: #f2d42ce7;">START<br>👇</p>
-        <a href="html1.html" style="color: #f2d42ce7;">chapter1</a><br>
-        <a href="html2.html" style="color: #f2d42ce7;">chapter2</a><br>
-        <a href="html3.html" style="color: #f2d42ce7;">chapter3</a><br>
-        <a href="html4.html" style="color: #f2d42ce7;">chapter4</a>
+    <div class="links">
+        <a>Exercises</a><br>
+        <a href="./exercises/e1/index.html" style="color: #f2d42ce7;">e1-helloworld</a><br>
+        <a href="./exercises/e2-3/menu.html" style="color: #f2d42ce7;">e2-3-handmade-web</a><br>
+        <a href="./exercises/e4-5/bletter.html" style="color: #f2d42ce7;">e4-5-css-letterforms-animation</a><br>
+        <a href="./exercises/e4-5/bletter-still.html" style="color: #f2d42ce7;">e4-5-css-letterforms-still</a><br>
+        <a href="./exercises/e6/javas.html" style="color: #f2d42ce7;">e6-on-off</a><br>
+        <a href="./exercises/e8/3.html" style="color: #f2d42ce7;">e8-patterns</a><br>
+        <a>Projects</a><br>
+        <a href="./projects/project1/project1.html" style="color: #f2d42ce7;">project1</a><br>
+        <a href="./projects/project2/tank.html" style="color: #f2d42ce7;">project2</a><br>
     </div>
-    <style>
-        .side-links {
-            position: fixed;
-            top: 50%;
-            left: 90px;
-            transform: translateY(-50%);
-            z-index: 30;
-            text-align: left;
-            font-size: 28px;
-            line-height: 2;
-        }
-    </style>
 </body>
 </html>
