--- a/exercises/e2-3/html4.html
+++ b/exercises/e2-3/html4.html
@@ -88,7 +88,7 @@
         <div class="navigation-mobile">👆</div>
         <div class="footer">
             <a href="html3.html">◄</a>
-            <a href="index.html" style="margin-left: 20px;">🏠</a>
+            <a href="menu.html" style="margin-left: 20px;">🏠</a>
             <span style="color: #e6bf16;"></span>
         </div>
     </body>
