--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
         </div>
     </div>
     <div class="links">
-        <a>Exercises</a><br>
+        <a>[Exercises]</a><br>
         <a href="./exercises/e1/index.html" style="color: #f2d42ce7;">e1-helloworld</a><br>
         <a href="./exercises/e2-3/menu.html" style="color: #f2d42ce7;">e2-3-handmade-web</a><br>
-        <a href="./exercises/e4-5/bletter.html" style="color: #f2d42ce7;">e4-5-css-letterforms-animation</a><br>
-        <a href="./exercises/e4-5/bletter-still.html" style="color: #f2d42ce7;">e4-5-css-letterforms-still</a><br>
+        <a href="./exercises/e4-5/bletter.html" style="color: #f2d42ce7;">e4-5-css-letterforms</a><br>
         <a href="./exercises/e6/javas.html" style="color: #f2d42ce7;">e6-on-off</a><br>
         <a href="./exercises/e8/3.html" style="color: #f2d42ce7;">e8-patterns</a><br>
-        <a>Projects</a><br>
+        <a>[Projects]</a><br>
         <a href="./projects/project1/project1.html" style="color: #f2d42ce7;">project1</a><br>
         <a href="./projects/project2/tank.html" style="color: #f2d42ce7;">project2</a><br>
     </div>
